@@ -16,7 +16,7 @@
       </a>
       </div>
       <div id="hdrNav">
-      	<a href="http://www.gnome.org/projects">Gnome Projects</a> &middot;
+      	<a href="http://projects.gnome.org/">Gnome Projects</a> &middot;
        	Deskbar-Applet &middot;
 	    <a href="download.html">Download</a> &middot;
 	    <a href="screenshots.html">Screenshots</a> &middot;
