@@ -16,7 +16,7 @@
       </a>
       </div>
       <div id="hdrNav">
-      	<a href="http://www.gnome.org/projects">Gnome Projects</a> &middot;
+      	<a href="http://projects.gnome.org/">Gnome Projects</a> &middot;
        	<a href="index.html">Deskbar-Applet</a> &middot;
        	<a href="download.html">Download</a> &middot;
 	    Screenshots &middot;
