@@ -1,5 +1,13 @@
 2008-11-30	Sebastian Pölsterl	<sebp@cvs.gnome.org>
 
+	* screenshots.html
+	* getinvolved.html
+	* download.html
+	* index.html:
+	Updated URL to GNOME projects listing
+
+2008-11-30	Sebastian Pölsterl	<sebp@cvs.gnome.org>
+
 	* deskbar/images/icons
 	* deskbar/images/Makefile.am
 	* getinvolved.html
